--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -8,7 +8,7 @@ service_link: https://developer.service.hmrc.gov.uk/api-documentation
 
 # Links to show on right-hand-side of header
 header_links:
-  VAT (MTD) End-to-End Service Guide: /guides/irr-api-end-to-end-service-guide
+  IRR End-to-End Service Guide: /guides/irr-api-end-to-end-service-guide
   Documentation: /api-documentation/docs/using-the-hub
   Applications: /developer/applications
   Support: /developer/support
